--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,5 +1,5 @@
-# DB
-spring.datasource.url=jdbc:mysql://localhost:3306/OT250
+# # DB
+spring.datasource.url=jdbc:mysql://localhost:3306/OT250test
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.initialization-mode=always
